<resources>
    <string name="app_name">SurvivalGame</string>
    <string name="new_game">Single Player</string>
    <string name="match">Match</string>
    <string name="scores">Score</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="back">Back</string>
    <string name="difficulty">Difficulty</string>
    <string name="rand_char">Random Character</string>
    <string name="choose_char">Choose Character</string>
    <string name="exit">Exit</string>
    <string name="should_quit">Do you wish to Quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="item_spwan">Item Spwan Rate</string>
    <string name="monster_spawn">Monster Spwan Rate</string>
    <string name="facebook_app_id">1496468097106243</string>
    <string name="fb_login_protocol_scheme">fb1496468097106243</string>
    <string name="start">Start!</string>
    <string name="UnityPlayerActivity">UnityPlayerActivity</string>
</resources>
