<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The Survival Game"
        android:textColor="#00FFA0"
        android:textStyle="bold"
        android:textSize="38dp"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="top"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/SinglePlayer"
            android:text="@string/new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
        />

        <Button
            android:id="@+id/Multiplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"/>


        <Button
            android:id="@+id/Scores"
            android:layout_marginTop="0dp"
            android:text="@string/scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            />

        <Button
            android:id="@+id/Settings"
            android:layout_marginTop="0dp"
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
        />

        <Button
            android:id="@+id/Quit"
            android:layout_marginTop="0dp"
            android:text="@string/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>
</LinearLayout>
